--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		var speech = document.getElementById('cfg_speech'); 
 		
 		var arr = ["Sky & Tami ", "Joey Klaasen", 
-				"Suraj Pal Singh", "Avani Gregg", "Jordi Koalitic", "Aashika Bhatia", "Josh Richards", "yvonne!"]; 
+				"Suraj Pal Singh", "Avani Gregg", "Jordi Koalitic", "Aashika Bhatia", "Josh Richards", "Pus Pus"]; 
 				
 		
 		
